# Factory.ai

./: .gitignore  README.md  github_connector.py  main.py  pyproject.toml  test_github_connector.py
.github/workflows/: deploy.yml  transparency_log.yml  validate_templates.yml
ci_cd/docs/: ci_cd_scripts.md
ci_cd/scripts/: log_components.py  validate_templates.py
components/: __init__.py
components/brain_kit/: __init__.py  brain_kit.py
components/decision/: __init__.py  rule_engine.py
components/extensions/: README.md
components/memory/: __init__.py  state_store.py
components/nlp/: __init__.py  text_processor.py
integrations/: __init__.py
integrations/allbots/: __init__.py  client.py
integrations/aws/: __init__.py  lambda_deploy.py
integrations/azure/: __init__.py  function_deploy.py
integrations/gcp/: __init__.py  cloud_function_deploy.py
src/factory_ai/: __init__.py  cli.py  config.py  workflow.py
src/factory_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/factory_ai/connections/: __init__.py  allbots.py  base.py  github.py  openai.py
templates/automation/: README.md  bot.yaml
templates/customer_support/: README.md  bot.yaml
tests/: __init__.py  test_chatgpt_workflow.py  test_connections.py  test_github_workflow.py  test_marketplace_workflow.py  test_trading_workflow.py  test_workflow.py
workflows/: __init__.py  chatgpt_workflow.py  github_workflow.py  marketplace_workflow.py  trading_workflow.py
